--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -11,11 +11,11 @@
       </button>
     </div>
     <div class="form-group col-md-3">
-      <button type="submit" class="btn btn-primary mt-4 mb-4" (click)="onSubmit()">Edit Existing
+      <button type="submit" class="btn btn-primary mt-4 mb-4 disabled" (click)="onSubmit()">Edit Existing
       </button>
     </div>
     <div class="form-group col-md-3">
-      <button type="submit" class="btn btn-primary mt-4 mb-4" (click)="onSubmit()">Clone Group
+      <button type="submit" class="btn btn-primary mt-4 mb-4 disabled" (click)="onSubmit()">Clone Group
       </button>
     </div>
     <div class="form-group col-md-3 mt-4 mb-4">
@@ -30,7 +30,7 @@
       <div class="form-group col-md-3">
         <span class="label label-default">Group Number</span>
         <input type="text" maxlength="5" name="name" #name="ngModel" class="form-control mb-2" [(ngModel)]="groupNumber"
-          style="width: 100%;" placeholder="Group Number Field" required>
+          style="width: 100%;" placeholder="Group Number Field" required onkeyup="this.value=this.value.replace(/[^\d]/,'')" >
         <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
 
           <div *ngIf="name.errors.required">
@@ -42,7 +42,7 @@
       <div class="form-group col-md-3">
         <span class="label label-default">Group Name</span>
         <input type="text" class="form-control mb-2" [(ngModel)]="groupName" style="width: 100%;"
-          placeholder="Group Name Field">
+        onkeyup="this.value=this.value.replace(/[^a-zA-Z]/,'')" placeholder="Group Name Field">
       </div>
       <div class="form-group col-md-3">
         <span class="label label-default">Group effective date</span>
@@ -61,7 +61,8 @@
     <div class="row">
       <div class="form-group col-md-3">
         <span class="label label-default">Group Vendor</span>
-        <input type="text" class="form-control mb-2" [(ngModel)]="EnrolmentPatnerName" placeholder="Group Vendor Name">
+        <input type="text" class="form-control mb-2" [(ngModel)]="EnrolmentPatnerName" 
+        onkeyup="this.value=this.value.replace(/[^a-zA-Z]/,'')" placeholder="Group Vendor Name">
       </div>
 
       <div class="form-group col-md-3">
@@ -93,7 +94,8 @@
     <div class="row">
       <div class=" col-md-3">
         <span class="label label-default">Account Manager Name</span>
-        <input type="text" class="form-control mb-2 " [(ngModel)]="ManegerName" placeholder="Account Manager Name">
+        <input type="text" class="form-control mb-2 " [(ngModel)]="ManegerName" 
+        onkeyup="this.value=this.value.replace(/[^a-zA-Z]/,'')" placeholder="Account Manager Name">
       </div>
       <div class="col-md-3">
         <span class="label label-default">Account Manager Email</span>
