--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -15,7 +15,7 @@
     <div class="col-3">
       <span class="label label-default">Group Effective Date</span>
       <input type="date" [value]="dateValue" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
-        placeholder="Group Effective Date" formControlName="FChospEffectiveDate">
+        placeholder="Group Effective Date" [(ngModel)]="latest_datehospitalindemnity" formControlName="FChospEffectiveDate">
 
     </div>
     <div class="radio-button">
