--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-3">
           <span class="label label-default">Group Effective Date</span>
-          <input type="date" [value]="dateValue" formControlName = "FCfppiEffectiveDate" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+          <input type="date" [value]="dateValue" formControlName = "FCfppiEffectiveDate" [min]="minDate" [(ngModel)]="latest_datefpp" class="form-control mb-2 " style="width: 100%;"
             placeholder="Group Effective Date">
 
         </div>
