--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="col-3">
         <span class="label label-default">Group Effective Date</span>
-        <input type="date" [value]="dateValue" [min]="minDate" formControlName="FCaccEffectiveDate" [(ngModel)]="latest_dateaccident" class="form-control mb-2 " style="width: 100%;"
+        <input type="date"  [min]="minDate" formControlName="FCaccEffectiveDate" [(ngModel)]="latest_dateaccident" [value]="latest_dateaccident" class="form-control mb-2 " style="width: 100%;"
           placeholder="Group Effective Date">
   
       </div>
