--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-3">
           <span class="label label-default">Group Effective Date</span>
-          <input type="date" [value]="dateValue" formControlName = "FCfppiEffectiveDate" [min]="minDate" [(ngModel)]="latest_datefpp" class="form-control mb-2 " style="width: 100%;"
+          <input type="date" [value]="latest_datefpp" formControlName = "FCfppiEffectiveDate" [min]="minDate" [(ngModel)]="latest_datefpp" class="form-control mb-2 " style="width: 100%;"
             placeholder="Group Effective Date">
 
         </div>
@@ -36,7 +36,7 @@
           <input type="text" class="form-control mb-2 "  formControlName = "FCfppiAgentSign" style="width: 100%;" placeholder="Agent Signature">
         </div>
         <div class="mt-4">
-          <button class="btn btn-primary" type="submit">Reset Form </button>
+          <button class="btn btn-primary" (click) ="resetfpp()" type="submit">Reset Form </button>
         </div>
       </div>
     
@@ -60,7 +60,7 @@
 
           <span class="label label-default">Employee GI Amount Max</span>
 
-          <input type="text" class="form-control mb-2 " formControlName="FCfppiEmpGIAmtMax" style="width: 100%;" placeholder="Employee GI Amount Max">
+          <input type="text" class="form-control mb-2" formControlName="FCfppiEmpGIAmtMax" style="width: 100%;" placeholder="Employee GI Amount Max">
         </div>
 
 
@@ -68,11 +68,11 @@
         <div class="col-3">
           <span class="label label-default">Employee QI Amount Max</span>
 
-          <input type="text" class="form-control mb-2 " formControlName="FCfppiEmpQIAmtMax" style="width: 100%;" placeholder="Employee QI Amount Max">
+          <input type="text" class="form-control mb-2" formControlName="FCfppiEmpQIAmtMax" style="width: 100%;" placeholder="Employee QI Amount Max">
         </div>
         <div class="col-3">
           <span class="label label-default">Employee Max Amount</span>
-          <input type="text" class="form-control mb-2 " formControlName="FCfppiEmpAmtMax" style="width: 100%;" placeholder="Employee Max Amount">
+          <input type="text" class="form-control mb-2" formControlName="FCfppiEmpAmtMax" style="width: 100%;" placeholder="Employee Max Amount">
         </div>
       
       </div>
