--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -187,10 +187,10 @@
        </div>
        <div class="col-4">
          <div class="row" style="justify-content:space-evenly;">
-           <div class="col" style="margin-left: -147px;">
+           <div class="col">
            </div>
            <div class="col" style="margin-top: 24px;">
-             <mat-checkbox class="example-margin" formControlName="FCfppgWaiver" [(ngModel)]="indeterminate" name="Waiver">Waiver</mat-checkbox>
+             <mat-checkbox class="margin" formControlName="FCfppgWaiver" [(ngModel)]="indeterminate" name="Waiver">Waiver</mat-checkbox>
            </div>
          </div>
        </div>
