--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -15,7 +15,7 @@
     
       <div class="col-3">
         <span class="label label-default">Group Effective Date</span>
-        <input type="date" [value]="dateValue" [(ngModel)]="latest_datebasicgrplife" formControlName="FCbasicEffectiveDate" [min]="minDate"
+        <input type="date" [value]="latest_datebasicgrplife" [(ngModel)]="latest_datebasicgrplife" formControlName="FCbasicEffectiveDate" [min]="minDate"
           class="form-control mb-2 " style="width: 100%;" placeholder="Group Effective Date">
 
       </div>
