--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="col-3">
       <span class="label label-default">Group Effective Date</span>
-      <input type="date" [value]="dateValue" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+      <input type="date" [value]="latest_dateemppaisci" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
       formControlName="FCempCIEffectiveDate" [(ngModel)]="latest_dateemppaisci" placeholder="Group Effective Date">
 
     </div>
