--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="col-3">
         <span class="label label-default">Group Effective Date</span>
-        <input type="date" [value]="dateValue" formControlName="FCVolCIEffectiveDate" [min]="minDate"
+        <input type="date" [value]="latest_datevolci" [(ngModel)]="latest_datevolci" formControlName="FCVolCIEffectiveDate" [min]="minDate"
           class="form-control mb-2 " style="width: 100%;" placeholder="Group Effective Date">
 
       </div>
