--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -16,7 +16,7 @@
        </div>
        
        <div class="col-3">
-         <span class="label label-default">Group Effective Date</span>
+         <span class="label label-default">FPPG Effective Date</span>
          <input type="date" formControlName="FCfppgEffectiveDate" [(ngModel)]="latest_date" [value]="latest_date" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
            placeholder="Group Effective Date">
        </div>
@@ -75,7 +75,7 @@
          <input type="text"  formControlName="FCfppgEmpQIAmtMax" class="form-control mb-2 " style="width: 100%;" placeholder="Employee QI Amount Max">
        </div>
        <div class="col-3">
-         <span class="label label-default">Employee Max Amount</span>
+         <span class="label label-default">Employee SI Max Amount</span>
          <input type="text" class="form-control mb-2" formControlName="FCfppgEmpAmtMax" style="width: 100%;" placeholder="Employee Max Amount">
        </div>
      
@@ -122,18 +122,18 @@
       <label class="radio-label">Validate</label></div>
   </div>
   <div class="col-3">
-    <span class="label label-default">Plan code Manual Entry</span>
-    <input type="text" formControlName="FCfppgPlanCodeManualEntry" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
+    <span class="label label-default">Employee Plan code </span>
+    <input type="text" formControlName="FCfppgEmpPlanCode" class="form-control mb-2 " style="width: 100%;" placeholder="Employee Plan code ">
   </div>
 
   <div class="col-3">
-    <span class="label label-default">Plan code Manual Entry</span>
-    <input type="text" formControlName="FCfppgPlanCodeManualEntry" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
+    <span class="label label-default">Spouse Plan code</span>
+    <input type="text" formControlName="FCfppgSpousePlanCode" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse Plan code">
   </div>
 
   <div class="col-3">
-    <span class="label label-default">Plan code Manual Entry</span>
-    <input type="text" formControlName="FCfppgPlanCodeManualEntry" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
+    <span class="label label-default">Child Plan code </span>
+    <input type="text" formControlName="FCfppgChildPlanCode" class="form-control mb-2 " style="width: 100%;" placeholder=" Child Plan code ">
   </div>
 </div>
 
