--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -145,7 +145,7 @@
 
     </div>
 
-    <div class="row mt-2" style="justify-content:space-evenly;">
+    <!-- <div class="row mt-2" style="justify-content:space-evenly;">
       <div class="radio-button">
         <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
             formControlName="FCVolCIOpenEnrollGI_Action" />
@@ -164,24 +164,7 @@
           placeholder="Open Enrollment GI">
       </div>
 
-      <!-- <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCVolCIPlanCodeManualEntry_Action" />
-          <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCVolCIPlanCodeManualEntry_Action" />
-          <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCVolCIPlanCodeManualEntry_Action" />
-          <label class="radio-label">Validate</label></div>
-      </div>
-      <div class="col-4">
-        <span class="label label-default">Plan code manual Entry</span>
-        <input type="text" class="form-control mb-2 " formControlName="FCVolCIPlanCodeManualEntry" style="width: 100%;"
-          placeholder="Plan code manual Entry">
-      </div> -->
-
-    </div>
+    </div> -->
 
     <div class="row pt-2 pl-4">
       <h6>
