--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -13,7 +13,7 @@
           <label class="radio-label">Validate</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Group Effective Date</span>
+        <span class="label label-default">Accident Effective Date</span>
         <input type="date"  [min]="minDate" formControlName="FCaccEffectiveDate" [(ngModel)]="latest_dateaccident" [value]="latest_dateaccident" class="form-control mb-2 " style="width: 100%;"
           placeholder="Group Effective Date">
   
