--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -15,7 +15,7 @@
             <label class="radio-label">Validate</label></div>
         </div>
         <div class="col-3">
-          <span class="label label-default">Group Effective Date</span>
+          <span class="label label-default">FPPI Effective Date</span>
           <input type="date" [value]="latest_datefpp" formControlName = "FCfppiEffectiveDate" [min]="minDate" [(ngModel)]="latest_datefpp" class="form-control mb-2 " style="width: 100%;"
             placeholder="Group Effective Date">
 
