--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -14,7 +14,7 @@
           <label class="radio-label">Validate</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Group Effective Date</span>
+        <span class="label label-default">Vol Grp life Effective Date</span>
         <input type="date" [value]="latest_datevolgrplife" formControlName="FCVolGrpLfEffectiveDate" [(ngModel)]="latest_datevolgrplife" [min]="minDate" class="form-control mb-2" style="width: 100%;"
           placeholder="Group Effective Date">
 
