--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -13,7 +13,7 @@
         <label class="radio-label">Validate</label></div>
     </div>
     <div class="col-3">
-      <span class="label label-default">Group Effective Date</span>
+      <span class="label label-default">HI Effective Date</span>
       <input type="date" [value]="latest_datehospitalindemnity" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
         placeholder="Group Effective Date" [(ngModel)]="latest_datehospitalindemnity" formControlName="FChospEffectiveDate">
 
