--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -14,7 +14,7 @@
           <label class="radio-label">Validate</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Group Effective Date</span>
+        <span class="label label-default">VOL CI Effective Date</span>
         <input type="date" [value]="latest_datevolci" [(ngModel)]="latest_datevolci" formControlName="FCVolCIEffectiveDate" [min]="minDate"
           class="form-control mb-2 " style="width: 100%;" placeholder="Group Effective Date">
 
