--- a/ClientApp/src/app/custom-bulk-template/custom-bulk-template.component.html
+++ b/ClientApp/src/app/custom-bulk-template/custom-bulk-template.component.html
@@ -4,7 +4,7 @@
     <form (ngSubmit)="onSubmit(form, userData)" #form="ngForm">
         <div class="row">
             <div class="form-group col-md-4">
-                <label for="groupNumber" class="label">Group Number</label>
+                <label for="groupNumber" class="label">Group Number<span aria-hidden="true" class="required">*</span></label>
                 <input type="text" id="groupNumber" class="form-control" [(ngModel)]="userData.groupNumber"
                     name="groupNumber" required placeholder="Enter Group Number">
                 <div *ngIf="userData.groupNumber==''" class="alert" style="color:red;padding:0px">Group Number is required</div>
@@ -12,7 +12,7 @@
 
 
             <div class="form-group col-md-4">
-                <label for="product" class="label">Product Name</label>
+                <label for="product" class="label">Product Name<span aria-hidden="true" class="required">*</span></label>
                 <select id="product" class="form-control" [(ngModel)]="userData.product" name="product" required>
                     <option selected>Select a Product</option>
                     <option *ngFor="let i of productsList">
