Radio changes & error fields added

--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -2,14 +2,11 @@
   <form [formGroup]="accformgrp">
     <div class="row pb-2 " style="justify-content:space-evenly;margin-right: 7%;">
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCaccEffectiveDate_Action" />
+        <div><input type="radio" value="10002" formControlName="FCaccEffectiveDate_Action" />
           <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCaccEffectiveDate_Action" />
+        <div><input type="radio" value="10001" formControlName="FCaccEffectiveDate_Action" />
           <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCaccEffectiveDate_Action" />
+        <div><input type="radio" value="10003" formControlName="FCaccEffectiveDate_Action" />
           <label class="radio-label">Validate</label></div>
       </div>
       <div class="col-3">
@@ -19,14 +16,11 @@
   
       </div>
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCaccSitusState_Action" />
+        <div><input type="radio" value="10002" formControlName="FCaccSitusState_Action" />
           <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCaccSitusState_Action" />
+        <div><input type="radio" value="10001" formControlName="FCaccSitusState_Action" />
           <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCaccSitusState_Action" />
+        <div><input type="radio" value="10003" formControlName="FCaccSitusState_Action" />
           <label class="radio-label">Validate</label></div>
       </div>
       <div class="col-3">
@@ -44,14 +38,11 @@
     </div>
     <div class="row pb-2 " style="justify-content:space-evenly;">
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCaccOnOff_Action" />
+        <div><input type="radio" value="10002" formControlName="FCaccOnOff_Action" />
           <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCaccOnOff_Action" />
+        <div><input type="radio" value="10001" formControlName="FCaccOnOff_Action" />
           <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCaccOnOff_Action" />
+        <div><input type="radio" value="10003" formControlName="FCaccOnOff_Action" />
           <label class="radio-label">Validate</label></div>
       </div>
       <div class="col-4">
@@ -64,14 +55,11 @@
       
       </div>
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCaccRateLevel_Action" />
+        <div><input type="radio" value="10002" formControlName="FCaccRateLevel_Action" />
           <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCaccRateLevel_Action" />
+        <div><input type="radio" value="10001" formControlName="FCaccRateLevel_Action" />
           <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCaccRateLevel_Action" />
+        <div><input type="radio" value="10003" formControlName="FCaccRateLevel_Action" />
           <label class="radio-label">Validate</label></div>
       </div>
       <div class="col-4 mb-2">
